--- a/code/frontend/src/pages/layout/Layout.module.css
+++ b/code/frontend/src/pages/layout/Layout.module.css
@@ -132,7 +132,8 @@ body {
 
 @media screen and (-ms-high-contrast: active), (forced-colors: active) {
 
-.shareButtonContainer{
+.shareButtonContainer, .headerTitleContainer{
     border: 2px solid WindowText;
 }
+
 }
